--- a/src/app/component/cta-preview/cta-preview.component.html
+++ b/src/app/component/cta-preview/cta-preview.component.html
@@ -23,7 +23,7 @@
     class="cta-preview-container__cta cta-preview-container__cta--right">
     <div _ngcontent-jtn-c42="" class="cta-preview-container__text">
       <h3 _ngcontent-jtn-c42="" class="cta-preview-container__h3">Inside<br
-          _ngcontent-jtn-c42="">gravity</h3>
+          _ngcontent-jtn-c42="">Technology</h3>
       <p _ngcontent-jtn-c42="" class="cta-preview-container__p cta-preview-container__p--desktop">
         Discover our story, events, technology and more</p>
     </div>
