--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer _ngcontent-jtn-c103="" class="footer">
   <div _ngcontent-jtn-c103="" class="container footer__container">
     <div _ngcontent-jtn-c103="" class="footer__left">
-      <p _ngcontent-jtn-c103="" class="footer__p">© Gravity Industries Ltd | Registered in the UK.<br
+      <p _ngcontent-jtn-c103="" class="footer__p">© Technology Industries Ltd | Registered in the UK.<br
           _ngcontent-jtn-c103=""> Company No. 10605602</p><a _ngcontent-jtn-c103="" href="https://www.ryzeagency.co.uk"
         target="_blank" class="footer__ryze-credit">Made by
         <svg-icon _ngcontent-jtn-c103="" src="/assets/svgs/ryze-logo.svg"><svg xmlns="http://www.w3.org/2000/svg"
