--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -101,7 +101,7 @@
               <div class="background-image header__menu__item__background header__menu__item__background--faded">
                 <img src="assets/images/menu/inside-gravity@2x.jpg" alt="Inside Gravity" title="Inside Gravity"
                   class="background-image__img"></div>
-              <div class="header__menu__item__title">Inside Gravity</div>
+              <div class="header__menu__item__title">Inside Technology</div>
               <div class="header__menu__item__text">
                 <div class="arrow header__menu__item__icon"></div>
               </div>
