--- a/src/app/component/promotion-banner/promotion-banner.component.html
+++ b/src/app/component/promotion-banner/promotion-banner.component.html
@@ -5,7 +5,7 @@
         appimagewithfallback="assets/images/promotions/taking-on-gravity-book-small@2x.png"
         class="promotion-banner__image">
       <div class="promotion-banner__links">
-        <div class="promotion-banner__text"> Taking on gravity – Out now! </div><a
+        <div class="promotion-banner__text"> Taking on Technology – Out now! </div><a
           href="https://www.shop.gravity.co/accessories/8c70f5p1cvbqmzi6dko51wdp9sq47y" target="_blank"
           class="promotion-banner__link"> Order exclusive<br> signed copy <div
             class="arrow-cta promotion-banner__arrow-cta">
