--- a/src/app/component/text-markers/text-markers.component.html
+++ b/src/app/component/text-markers/text-markers.component.html
@@ -10,7 +10,7 @@
   <div _ngcontent-jtn-c41="" class="text-area text-markers-container__text">
     <h2 _ngcontent-jtn-c41="" class="text-markers-container__h2">Custom Jet Suits</h2>
     <p _ngcontent-jtn-c41="" class="text-markers-container__p">Make the dream a reality by
-      commissioning your very own custom made Gravity Industries Jet Suit.</p>
+      commissioning your very own custom made Magnitude Of Technology.</p>
     <div _ngcontent-jtn-c41=""
       approuterlinkwithstate="{&quot;routerParams&quot;: [&quot;contact&quot;], &quot;state&quot;: &quot;ltr&quot;}"
       class="button button--turquoise text-markers-container__text__button">
