--- a/src/app/view/page-home-page/page-home-page.component.html
+++ b/src/app/view/page-home-page/page-home-page.component.html
@@ -29,7 +29,7 @@
     </div>
     <div _ngcontent-jtn-c45="" appparallax="" class="hero-container__heading"
       style="will-change: transform; transform: translate3d(var(--translateX), var(--translateY), 0); --translateX:0%; --translateY:0%;">
-      <h1 _ngcontent-jtn-c45="" class="hero-container__h1">Flight club</h1>
+      <h1 _ngcontent-jtn-c45="" class="hero-container__h1">Tech club</h1>
     </div>
     <div _ngcontent-jtn-c45=""
       class="page-nav page-nav--left page-nav--disabled page-nav--disabled--left hero-container__page-nav">
@@ -54,8 +54,7 @@
       <div _ngcontent-jtn-c45="" class="page-nav__text">Inside<br _ngcontent-jtn-c45="">Gravity</div>
     </div>
     <div _ngcontent-jtn-c45="" class="hero-container__scroll-indicator">
-      <div _ngcontent-jtn-c45="" class="hero-container__scroll-indicator__text"> Join the Jet Suit
-        pilots<br _ngcontent-jtn-c45="" class="hero-container__scroll-indicator__br"> making human
+      <div _ngcontent-jtn-c45="" class="hero-container__scroll-indicator__text"> Join the Magnitude Of Technology pilots<br _ngcontent-jtn-c45="" class="hero-container__scroll-indicator__br"> making human
         flight a reality </div>
       <div _ngcontent-jtn-c45="" appngscrollto="#introduction"
         class="arrow-cta hero-container__scroll-indicator__arrow-cta">
